--- a/edgeiq/ggv2/ggv2_fleet_provisioning_template.conf
+++ b/edgeiq/ggv2/ggv2_fleet_provisioning_template.conf
@@ -2,7 +2,7 @@
 #
 #   ggv2_fleet_provisioning_template.conf
 #
-#   Configuration file for EdgeIQ deployment of Greengrass V2 to Laird IG60
+#   Configuration file for EdgeIQ deployment of Greengrass V2 to IG60
 #   systems
 #
 ################################################################################
@@ -57,24 +57,24 @@ FLEET_PROVISIONING_PLUGIN_SIGNATURE=""
 ######################################################
 
 # Path to device certificate
-# Default is "/var/media/mmcblk0p1/greengrass/v2/device.pem.crt"
+# Default is "/media/mmcblk0p1/greengrass/v2/device.pem.crt"
 # ** REQUIRED **
-SYSTEM_CERTIFICATE_FILE_PATH="/var/media/mmcblk0p1/greengrass/v2/thingCert.crt"
+SYSTEM_CERTIFICATE_FILE_PATH="/media/mmcblk0p1/greengrass/v2/thingCert.crt"
 
 # Path to device private key
-# Default is "/var/media/mmcblk0p1/greengrass/v2/private.pem.key"
+# Default is "/media/mmcblk0p1/greengrass/v2/private.pem.key"
 # ** REQUIRED **
-SYSTEM_PRIVATE_KEY_PATH="/var/media/mmcblk0p1/greengrass/v2/privKey.key"
+SYSTEM_PRIVATE_KEY_PATH="/media/mmcblk0p1/greengrass/v2/privKey.key"
 
 # Path to Amazon Root CA certificate
-# Default is "/var/media/mmcblk0p1/greengrass/v2/AmazonRootCA1.pem"
+# Default is "/media/mmcblk0p1/greengrass/v2/AmazonRootCA1.pem"
 # ** REQUIRED **
-SYSTEM_ROOT_CA_PATH="/var/media/mmcblk0p1/greengrass/v2/AmazonRootCA1.pem"
+SYSTEM_ROOT_CA_PATH="/media/mmcblk0p1/greengrass/v2/AmazonRootCA1.pem"
 
 # Greengrass v2 Core Nucleus root path
-# Default is "/var/media/mmcblk0p1/greengrass/v2"
+# Default is "/media/mmcblk0p1/greengrass/v2"
 # ** REQUIRED **
-SYSTEM_ROOT_PATH="/var/media/mmcblk0p1/greengrass/v2"
+SYSTEM_ROOT_PATH="/media/mmcblk0p1/greengrass/v2"
 
 # Greengrass v2 Nucleus version
 # This parameter should match the version of the Greengrass v2 Nucleus specified in
@@ -84,7 +84,7 @@ SERVICES_AWS_GREENGRASS_NUCLEUS_VERSION="2.5.6"
 
 # Greengrass v2 root path
 # ** REQUIRED **
-SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_ROOT_PATH="/var/media/mmcblk0p1/greengrass/v2"
+SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_ROOT_PATH="/media/mmcblk0p1/greengrass/v2"
 
 # AWS region
 # ** REQUIRED **
@@ -111,19 +111,19 @@ SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_IOT_CREDENTIAL_ENDPOINT="
 SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_PROVISIONING_TEMPLATE=""
 
 # Path to claim certificate
-# Default is "/var/media/mmcblk0p1/greengrass/v2/claim-certs/claim.pem.crt"
+# Default is "/media/mmcblk0p1/greengrass/v2/claim-certs/claim.pem.crt"
 # ** REQUIRED **
-SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_CLAIM_CERTIFICATE_PATH="/var/media/mmcblk0p1/greengrass/v2/claim-certs/claim.pem.crt"
+SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_CLAIM_CERTIFICATE_PATH="/media/mmcblk0p1/greengrass/v2/claim-certs/claim.pem.crt"
 
 # Path to claim certificate private key
-# Default is "/var/media/mmcblk0p1/greengrass/v2/claim-certs/claim.private.pem.key"
+# Default is "/media/mmcblk0p1/greengrass/v2/claim-certs/claim.private.pem.key"
 # ** REQUIRED **
-SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_CLAIM_CERTIFICATE_PRIVATE_KEY="/var/media/mmcblk0p1/greengrass/v2/claim-certs/claim.private.pem.key"
+SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_CLAIM_CERTIFICATE_PRIVATE_KEY="/media/mmcblk0p1/greengrass/v2/claim-certs/claim.private.pem.key"
 
 # Path to Amazon Root CA certificate
-# Default is "/var/media/mmcblk0p1/greengrass/v2/AmazonRootCA1.pem"
+# Default is "/media/mmcblk0p1/greengrass/v2/AmazonRootCA1.pem"
 # ** REQUIRED **
-SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_ROOT_CA_PATH="/var/media/mmcblk0p1/greengrass/v2/AmazonRootCA1.pem"
+SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_ROOT_CA_PATH="/media/mmcblk0p1/greengrass/v2/AmazonRootCA1.pem"
 
 # Greengrass v2 Core thing name
 # If blank, "IG60_" plus the last six digits of the MAC address are used instead
@@ -132,3 +132,4 @@ SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_TEMPLATE_PARAMETERS_THING
 # Greengrass v2 Core thing group name
 # ** REQUIRED **
 SERVICES_AWS_FLEET_PROVISIONING_BY_CLAIM_CONFIGURATION_TEMPLATE_PARAMETERS_THING_GROUP_NAME=""
+
